Changed some styling, fixed issue with full images not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../images/Webp.net-resizeimage\ 1.jpg);
+    background: url(../images/126355.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -19,6 +19,7 @@ h2 {
     height: 300px;
     width: 300px;
     margin: 40px 0 20px 150px;
+    border: 5px solid white;
     
 }
 
@@ -31,3 +32,41 @@ p {
     margin: 20px;
 }
 
+#image-container {
+    float: left;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    top: 50%;
+    left: 5%;
+    
+}
+
+#content-container {
+    float: left;
+    width: 600px;
+    position: relative;
+    top: 25%;
+    left: 10%;
+
+     
+}
+
+#container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+#reset {
+    text-align: center;
+    height: 40px;
+    width: 150px;
+    background: blue;
+    color: white;
+    position: relative;
+    top: 50%;
+    left: 38%; 
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
